-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
3
-
92520e45b (dev), 84f39aaca (dev), e40c8d121 (6.9), e4e1f5a8f (6.9), a54fa0620 (6.8), 13129efd9 (6.8)
-
Foundation Sprint 125, Foundation Sprint 126
The QGrpcHttp2Channel doesn't track when reconnections happen from within Q*socket::errorOccurred signals, and there are some cases where in such error state RPCs can end up in unrecoverable states.
- is required for
-
QTBUG-129161 Various enhancements in Qt gRPC and Protobuf
-
- In Progress
-
For Gerrit Dashboard: QTBUG-133937 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
625792,17 | QGrpcHttp2Channel: detect operations coming from within socket errors | dev | qt/qtgrpc | Status: MERGED | +2 | 0 |
625818,13 | QGrpcHttp2Channel: Prevent infinite error handling in error state | dev | qt/qtgrpc | Status: MERGED | +2 | +1 |
627563,2 | QGrpcHttp2Channel: detect operations coming from within socket errors | 6.9 | qt/qtgrpc | Status: MERGED | +2 | 0 |
627564,2 | QGrpcHttp2Channel: Prevent infinite error handling in error state | 6.9 | qt/qtgrpc | Status: MERGED | +2 | 0 |
627632,2 | QGrpcHttp2Channel: detect operations coming from within socket errors | 6.8 | qt/qtgrpc | Status: MERGED | +2 | 0 |
627633,2 | QGrpcHttp2Channel: Prevent infinite error handling in error state | 6.8 | qt/qtgrpc | Status: MERGED | +2 | 0 |